--- a/plugin.video.tistheseason/changelog.txt
+++ b/plugin.video.tistheseason/changelog.txt
@@ -1,12 +1,5 @@
 v1.1
-based on bob 1.0.12
+    - Updated to Jen Template Core 1.5
 
-Added "plugin" system, see plugin.py
-Added most strings to strings.po
-Added hebrew translation (thanks Eng2Heb)
-Added Search and Search db generation script
-Loads of bugfixes
-
-Release 1.0.0 initial release
-
-based on bob 1.0.1
+v1.0
+    - Initial Release
