--- a/plugin.video.tistheseason/resources/language/English/strings.po
+++ b/plugin.video.tistheseason/resources/language/English/strings.po
@@ -1,9 +1,9 @@
-# Addon Name: Tis The Season
+# Addon Name: Tis the Season
 # Addon id: plugin.video.tistheseason
 # Addon Provider: MuadDib
 msgid ""
 msgstr ""
-"Project-Id-Version: Jen\n"
+"Project-Id-Version: Tis the Season\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Language-Team: English\n"
@@ -230,7 +230,7 @@ msgid "Offer to install required 3rd party repositories"
 msgstr ""
 
 msgctxt "#30758"
-msgid "Enable debugging mode"
+msgid "Enable Debugging Mode"
 msgstr ""
 
 msgctxt "#30760"
@@ -789,4 +789,12 @@ msgstr ""
 
 msgctxt "#30059"
 msgid "All Episodes"
+msgstr ""
+
+msgctxt "#30060"
+msgid "Root XML Location"
+msgstr ""
+
+msgctxt "#30061"
+msgid "Search DB Location"
 msgstr ""
