--- a/script.module.pyxbmct/changelog.txt
+++ b/script.module.pyxbmct/changelog.txt
@@ -1,3 +1,5 @@
+[B]Version 1.3.0[/B]
+- Added compatibility with Python 3.
 [B]Version 1.2.0[/B]
 - Added Estuary-based window skin (default starting from Kodi 17.0).
 - Fixed broken Blank* classes.
