--- a/plugin.video.topdocs/changelog.txt
+++ b/plugin.video.topdocs/changelog.txt
@@ -1,3 +1,8 @@
+v0.0.4
+    - Updated to Jen Template Core 1.8 (beta)
+    - Added Documentary Storm
+    - Added my Tube Documentaries list
+
 v0.0.3
     - Updated to Jen Template Core 1.5
 
